--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 Novinka
+-barev barev
+-ichka ape
+-dobavila stroku 4 
+-dobavila stroku 5
+-dobavila stroki 6
+-i 7
+-dlya tega 1
+-dlya tega 2
+-dlya tega 3
